syntax = "proto3";
import "google/api/annotations.proto";

message User{
    int64 id = 1;
    string userName = 2;
    string userEmail = 3;
    string level = 4;
    int32 parent = 5;
    int32 status = 6;
    int64 memberId = 7;
}

message LoginRequest{
    string api = 1;
    string username = 2;
    string password = 3;
}

message LoginResponse{
    string api = 1;
    string message = 2;
    bool error = 3;
    string token = 4;
    User user = 5;
}

service LoginService{
    rpc Login(LoginRequest) returns (LoginResponse){
        option (google.api.http) = {
            post: "/v1/user/login"
            body: "*"
        };
    }
}